# whisper-desktop

./: LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  plan.md  transcribe.example.py  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: App.tsx  main.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  desktop.template  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  local.rs  manager.rs  mod.rs  sounds.rs  srt.rs  system.rs  transcribe.rs
src/components/: DashboardCard.tsx  FileDropArea.tsx  HistoryItem.tsx  HistoryList.tsx  MainLayout.tsx  ModelManager.tsx  RecordButton.tsx  RecordingControls.tsx  SearchBar.tsx  SettingsModal.tsx  ShortcutRecorder.tsx  SrtPanel.tsx  SrtProgressBar.tsx  TitleBar.tsx  Toast.tsx  TranscribeProgress.tsx  TranslateToggle.tsx
src/components/shared/: SegmentedControl.tsx  ToggleSwitch.tsx
src/hooks/: useCLIEvents.ts  useRecording.ts  useShortcuts.ts  useSrtGeneration.ts
src/lib/: audio.ts  config.ts  history.ts  recordingController.ts  shortcuts.ts  utils.ts
src/stores/: useConfigStore.ts  useHistoryStore.ts  useRecordingStore.ts  useSrtConfigStore.ts  useToastStore.ts
src/styles/: base.css  components.css  download-progress.css  gpu-setup.css  layout.css  main.css  manager.css  titlebar.css  variables.css
src/ui/: history.ts  icons.ts  layout.ts  layout.ts.backup  manager.ts.backup  titlebar.ts.backup  toast.ts
