[package]
name = "whisper-plus"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whisper_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
hound = "3.5.1"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
whisper-rs = "0.13.2"
futures-util = "0.3"
open = "5.3.3"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
sysinfo = "0.30"
enigo = "0.6.1"
rodio = "0.19"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
rocm = ["whisper-rs/hipblas"]

